toolbar: - use jquery ui to convert spans into buttons (prevents accidental formatting on form submission) - enhance alignment issues - enhance positioning of cursor after insertion (no selection = between codes, selection = after)
fixes #2912


git-svn-id: svn://develop.studip.de/studip/trunk@24437 c5b85792-5220-0410-ad23-ed5b6b8ad999

--- a/public/assets/stylesheets/style.less
+++ b/public/assets/stylesheets/style.less
@@ -204,19 +204,24 @@ div.overdiv {
     .box-sizing(border-box);
 }
 .editor_toolbar {
-    .clearfix();
-    padding: 0.5em 0;
-    text-align: left;
+    display: inline-block;
+    font-size: 0.75em;
+    position: relative;
 
-    // float all divs right (actually we just want the second)
-    > div {
-        float: right;
-        button { margin-left: 0.25em; }
-    }
-    // float first div left (which leaves the second one to the right)
-    > div:first-child {
-        float: left;
-        button { margin-left: 0; margin-right: 0.25em; }
+    .buttons {
+        .clearfix();
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+
+        .left  { float: left; }
+        .right { float: right; }
+
+        .ui-button {
+            .border-radius(4px);
+            line-height: 1em;
+        }
     }
 }
 
